--- a/Business_Solutions/requirements.txt
+++ b/Business_Solutions/requirements.txt
@@ -8,7 +8,7 @@ django-multiupload==0.6.1
 gunicorn==21.2.0
 packaging==24.0
 pillow==10.2.0
-psycopg2==2.9.9
+psycopg2-binary==2.9.6
 rcssmin==1.1.1
 rjsmin==1.2.1
 soupsieve==2.5
